# ruff-tutor-mcp

./: .gitignore  .ruff-tutor.toml.example  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ruff_tutor_mcp/: config.py  main.py
src/ruff_tutor_mcp/commands/: __init__.py  ruff.py
src/ruff_tutor_mcp/models/: __init__.py  fix.py  result.py  rule.py  violation.py
src/ruff_tutor_mcp/services/: __init__.py  analyzer.py  diffparser.py  tutor.py
src/ruff_tutor_mcp/templates/: __init__.py  instructions.py
tests/: test_config.py
tests/templates/: test_instructions.py
